[package]
name = "k8s-microservice-pki"
version = "0.1.0"
authors = ["schrodit <mail@timschrodi.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
serde_yaml = "0.8"
